# ashwinvis.github.io

./: .gitignore  .gitmodules  .pyup.yml  .travis.yml  .vale.ini  2014-11-07-a-world-of-zombie-blogs.html  2014-11-07-take-happiness-spread-joy-hurt-no-one-and-dont.html  2014-11-11-ying-yang.html  2014-12-05-house-nehru.html  2014-12-13-random-acts-of-kindness.html  2015-03-29-so-many-places-movies-music-books-and-journal.html  2015-04-06-tmesis.html  2015-10-28-stockholm-throught-the-years-sthlm-urbanization.html  404.html  CNAME  HISTORY.md  Makefile  Pipfile  README.md  REQUIREMENTS.txt  a-dictionary-of-horrors.html  about-me-i-dunno-im-a-moron.html  age-21-where-are-you-now.html  app.js  archived_badge.rst  archives.html  archives2.html  archives3.html  ashwin-vishnu-mohanan.html  automate-boring-writing-with-vim.html  back-to-arch-linux.html  being-a-malayali.html  buying-a-new-phone.html  categories.html  categories2.html  categories3.html  cloud-computing.html  diversity-amongst-python-interpreters.html  domain-name.html  domain.sh  (+67 more)
_notes/: 2019-12-05-i7r4p.md
author/: ashwin-vishnu-mohanan.html  ashwin-vishnu-mohanan2.html  ashwin-vishnu.html  ashwin-vishnu2.html  azuwish.html  azuwish2.html  bigfatpage.html
category/: blog.html  blog2.html  blog3.html  blogger-archive.html  blogger-archive2.html  bookmarks.html  microblog.html  misc.html  quote.html  static.html  tech-talk.html  tech-talk2.html  tumblr-archive.html  tumblr.html
content/: 2020-01-02-pelican-mini-cms.md  2020-01-02-pelican-mini-cms.rst  2020-01-03-back-to-arch-linux.rst  48.rst  pyconse2019.md  (+30 more)
(+309 files in other folders)
