[metadata]
author = Ashwin Vishnu Mohanan
name = pelican-ashwinvis
version = 0.0.1
description = A collection of plugins used for Ashwin's website
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
url = https://ashwin.info.tm
license = AGPL-3.0
license_file = LICENSE

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0

install_requires =
    pelican

[options.packages.find]
where=src

