[metadata]
author = Ashwin Vishnu Mohanan
name = pelican-ashwinvis
version = 0.1.0
description = A collection of plugins used for Ashwin's website
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
url = https://ashwinvis.github.io
license = AGPL-3.0
license_file = LICENSE

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0

install_requires =
    pelican[markdown] >=4.6.0, <5.0.0
    # pelican-myst-reader
    docutils>=0.17.0

[options.packages.find]
where=src

